# INFO-H417-g27

./: .clang-format  .gitignore  CMakeLists.txt  README.md  cpp_coding_guidelines.md
include/: .gitignore
include/merge/: entry.hpp
include/performance/: length.hpp  length_buffered.hpp  length_mmap.hpp  length_seq_read.hpp  length_simple.hpp  length_stdio.hpp
include/stream/: buffered_input_stream.hpp  buffered_output_stream.hpp  input_stdio_stream.hpp  input_stream.hpp  mmap_input_stream.hpp  mmap_output_stream.hpp  ouput_stdio_stream.hpp  output_stream.hpp  simple_input_stream.hpp  simple_output_stream.hpp  string_buffer.hpp
sources/: CMakeLists.txt  resources_config.hpp.in
sources/merge/: entry.cpp  extsort.cpp  extsort_main.cpp
sources/performance/: length.cpp  length_buffered.cpp  length_main.cpp  length_mmap.cpp  length_seq_read.cpp  length_simple.cpp  length_stdio.cpp  randjump_main.cpp  rrmerge.cpp  rrmerge_main.cpp
sources/stream/: buffered_input_stream.cpp  buffered_output_stream.cpp  input_stdio_stream.cpp  input_stream.cpp  mmap_input_stream.cpp  mmap_output_stream.cpp  ouput_stdio_stream.cpp  output_stream.cpp  simple_input_stream.cpp  simple_output_stream.cpp  string_buffer.cpp
test/: CMakeLists.txt  example_test.cpp
test/python/: benchmark.py  benchmark_length.py  plot.py  plot_length.py
test/stream/: buffered_stream_test.cpp  mmap_stream_test.cpp  simple_stream_test.cpp  stream_stdio_test.cpp
